# consumption-agent

./: .gitignore  HEARTBEAT.md  IDENTITY.md  MEMORY.md  TOOLS.md  USER.md  check_mail.py  consumption-agent.skill  credit-monitor.skill  daily_report.py  dayexp.skill  email-access.skill  exec-approvals.json  extract_first_frame.py  extract_video_frames.py  fetch_ozon_adb._receipts.py  fetch_ozon_receipts.py  fetch_ozon_receipts_playwright.py  iterative_troika_roadmap.docx  iterative_troika_roadmap.md  iterative_troika_roadmap.tex  monthexp.skill  openclaw.json  openclaw.json.backup_before_state_reset  openclaw.json.bak.3  openclaw.json.bak.4  openclaw.json.clobbered.2026-04-24T20-06-03-291Z  openclaw.json.clobbered.2026-04-24T20-06-10-674Z  paperclip_tasks_2026-05-12.md  process_screenshots.py  pyproject.toml  roadmap.md  send_email.py  send_roadmap.py  set-windows-keepalive.ps1
consumption_agent/: .env.example  .gitignore  01_architecture.md  02_architecture_v2.md  02_needs_matrix.md  03_database_schema.md  04_roadmap.md  05_coding_plan_2026-05-16.md  05_monetization.md  BOT_COMMANDS.md  EMAIL_STATUS.md  README.md  README_check.md  TZ.md  architecture_overview.md  audit_report_2026-04-29.md  backfill_ozon_items.py  brand_parser.py  carsharing_import.py  check_credit_alerts.sh  check_db.py  check_debts_fines.sh  check_debts_fines_retry.sh  check_fines.sh  check_fines_daily.sh  check_schema.py  cheque_parser.py  clean_screen_ocr.py  cleanup_recognized_items.py  cli.py  confirm_matches.py  consumption.db.bak_2026-05-21_pre_dedup  consumption_agent_full_030526.py  credit_alerts.py  credit_monitor.py  daily_cheque_scan.py  daily_plan_2026-05-13.md  daily_run.sh  dedup.py  dedupe_screen_ocr.py  (+73 more)
consumption_agent/backups/: consumption_agent_full_2026-05-06_0028.py  telegram_bot_2026-05-06_0028.py
consumption_agent/bot/: __init__.py  access.py  ai_categorizer.py  app.py  callbacks.py  markdown.py  ui.py
consumption_agent/cheques_html_ofd/: samokat_1290_7.html  samokat_1426_9.html  samokat_1466_6.html  samokat_1536_4.html  samokat_1541_8.html  samokat_1802_10.html  samokat_2177_2.html  samokat_2289_3.html  samokat_2373_0.html  samokat_2429_5.html  samokat_3226_1.html
consumption_agent/consumption/: categorize.py  db.py
consumption_agent/docs/: agent_rules.md  bot_commands.md  monetization.md  recognition_algorithms.md  security.md
consumption_agent/reports/: sms_3mo_report.json
consumption_agent/repositories/: __init__.py  alerts.py  credit.py  items.py  media.py  purchases.py
consumption_agent/scripts/: cleanup_alerts.py  dev_check.ps1  fines_bot.py  receipt_ocr.py  scan_sms_3mo.py  send_plan_19-21may.py  (+1 more)
(+233 files in other folders)
