[project]
name = "consumption-agent"
version = "0.3.0"
description = "Telegram bot for personal consumption tracking and inventory management"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=21.0,<22",
    "rapidfuzz>=3.0",
    "pillow>=10.0",
    "pyzbar>=0.1.9",
    "openai>=1.0",
    "python-dotenv>=1.0",
    "fpdf2>=2.7",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "mypy>=1.8",
    "ruff>=0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
